# http2s3

./: .cache_ggshield  .gitignore  README.md  decrypt_file.py  dockerfile  main.py  pyproject.toml  template.conf  utils.py
app/: __init__.py
app/lib/: conf.py  other.py  s3.py
app/v1/: endpoint.py
tests/: __init__.py  test_ressources.py  test_storage.py
tests/resouces/: test.txt
