[tool.poetry]
name = "curl2s3"
version = "0.1.0"
description = ""
authors = ["MichaelProjects <michael.lichtenecker@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.6"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
aioboto3 = "^12.3.0"
python-multipart = "^0.0.6"
cryptography = "^41.0.4"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
